update docs for discoveryInterface

--- a/discoveryInterface/libp2p/utils/offsettedseq.html
+++ b/discoveryInterface/libp2p/utils/offsettedseq.html
@@ -254,8 +254,8 @@ window.addEventListener("DOMContentLoaded", main2);
 
   </ul>
   <ul class="simple nested-toc-section">initOffsettedSeq
-      <li><a class="reference" href="#initOffsettedSeq"
-    title="initOffsettedSeq[T](): OffsettedSeq[T]">initOffsettedSeq[T](): OffsettedSeq[T]</a></li>
+      <li><a class="reference" href="#initOffsettedSeq%2Cint"
+    title="initOffsettedSeq[T](offset: int = 0): OffsettedSeq[T]">initOffsettedSeq[T](offset: int = 0): OffsettedSeq[T]</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">low
@@ -444,8 +444,8 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
-<div id="initOffsettedSeq" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#initOffsettedSeq"><span class="Identifier">initOffsettedSeq</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <a href="offsettedseq.html#OffsettedSeq"><span class="Identifier">OffsettedSeq</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span></pre></dt>
+<div id="initOffsettedSeq,int" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#initOffsettedSeq%2Cint"><span class="Identifier">initOffsettedSeq</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">offset</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">)</span><span class="Other">:</span> <a href="offsettedseq.html#OffsettedSeq"><span class="Identifier">OffsettedSeq</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span></pre></dt>
 <dd>
 
 
@@ -512,7 +512,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-09 12:01:04 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-09 12:48:06 UTC</small>
       </div>
     </div>
   </div>
