--- a/noise-peerid/libp2p/upgrademngrs/muxedupgrade.html
+++ b/noise-peerid/libp2p/upgrademngrs/muxedupgrade.html
@@ -246,8 +246,10 @@ window.addEventListener("DOMContentLoaded", main2);
 
   </ul>
   <ul class="simple nested-toc-section">upgradeOutgoing
-      <li><a class="reference" href="#upgradeOutgoing.e%2CMuxedUpgrade%2CConnection"
-    title="upgradeOutgoing(self: MuxedUpgrade; conn: Connection): Future[Connection]">upgradeOutgoing(self: MuxedUpgrade; conn: Connection): Future[Connection]</a></li>
+      <li><a class="reference" href="#upgradeOutgoing.e%2CMuxedUpgrade%2CConnection%2COpt%5BPeerId%5D"
+    title="upgradeOutgoing(self: MuxedUpgrade; conn: Connection; peerId: Opt[PeerId]): Future[
+    Connection]">upgradeOutgoing(self: MuxedUpgrade; conn: Connection; peerId: Opt[PeerId]): Future[
+    Connection]</a></li>
 
   </ul>
 
@@ -334,9 +336,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/upgrademngrs/muxedupgrade.nim#L205"
+href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/upgrademngrs/muxedupgrade.nim#L206"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/upgrademngrs/muxedupgrade.nim#L205" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/upgrademngrs/muxedupgrade.nim#L206" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -353,23 +355,23 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/upgrademngrs/muxedupgrade.nim#L119"
+href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/upgrademngrs/muxedupgrade.nim#L120"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/upgrademngrs/muxedupgrade.nim#L119" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/upgrademngrs/muxedupgrade.nim#L120" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
-<div id="upgradeOutgoing.e,MuxedUpgrade,Connection" class="tohide">
-<dt><pre><span class="Keyword">method</span> <a href="#upgradeOutgoing.e%2CMuxedUpgrade%2CConnection"><span class="Identifier">upgradeOutgoing</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="muxedupgrade.html#MuxedUpgrade"><span class="Identifier">MuxedUpgrade</span></a><span class="Other">;</span> <span class="Identifier">conn</span><span class="Other">:</span> <a href="../stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><a href="../stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">]</span> {.
-    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> </span><span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<div id="upgradeOutgoing.e,MuxedUpgrade,Connection,Opt[PeerId]" class="tohide">
+<dt><pre><span class="Keyword">method</span> <a href="#upgradeOutgoing.e%2CMuxedUpgrade%2CConnection%2COpt%5BPeerId%5D"><span class="Identifier">upgradeOutgoing</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="muxedupgrade.html#MuxedUpgrade"><span class="Identifier">MuxedUpgrade</span></a><span class="Other">;</span> <span class="Identifier">conn</span><span class="Other">:</span> <a href="../stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">;</span> <span class="Identifier">peerId</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><a href="../peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span>
+    <a href="../stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> </span><span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+                  <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/upgrademngrs/muxedupgrade.nim#L91"
+href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/upgrademngrs/muxedupgrade.nim#L92"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/upgrademngrs/muxedupgrade.nim#L91" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/upgrademngrs/muxedupgrade.nim#L92" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -388,7 +390,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-31 13:32:41 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-31 14:44:13 UTC</small>
       </div>
     </div>
   </div>
