--- a/noise-peerid/libp2p/dialer.html
+++ b/noise-peerid/libp2p/dialer.html
@@ -210,7 +210,7 @@ window.addEventListener("DOMContentLoaded", main2);
   localPeerId*: PeerId
   ms: MultistreamSelect
   connManager: ConnManager
-  dialLock: Table[PeerId, AsyncLock]
+  dialLock: Table[Opt[PeerId], AsyncLock]
   transports: seq[Transport]
   nameResolver: NameResolver">Dialer</a></li>
   <li><a class="reference" href="#DialFailedError"
@@ -242,7 +242,9 @@ window.addEventListener("DOMContentLoaded", main2);
 
   </ul>
   <ul class="simple nested-toc-section">connect
-      <li><a class="reference" href="#connect.e%2CDialer%2CPeerId%2Cseq%5BMultiAddress%5D"
+      <li><a class="reference" href="#connect.e%2CDialer%2Cseq%5BMultiAddress%5D"
+    title="connect(self: Dialer; addrs: seq[MultiAddress]): Future[PeerId]">connect(self: Dialer; addrs: seq[MultiAddress]): Future[PeerId]</a></li>
+  <li><a class="reference" href="#connect.e%2CDialer%2CPeerId%2Cseq%5BMultiAddress%5D"
     title="connect(self: Dialer; peerId: PeerId; addrs: seq[MultiAddress];
         forceDial = false): Future[void]">connect(self: Dialer; peerId: PeerId; addrs: seq[MultiAddress];
         forceDial = false): Future[void]</a></li>
@@ -299,7 +301,7 @@ class="link-seesrc" target="_blank">Source</a>
   <span class="Identifier">localPeerId</span><span class="Operator">*</span><span class="Other">:</span> <a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a>
   <span class="Identifier">ms</span><span class="Other">:</span> <a href="multistream.html#MultistreamSelect"><span class="Identifier">MultistreamSelect</span></a>
   <span class="Identifier">connManager</span><span class="Other">:</span> <a href="connmanager.html#ConnManager"><span class="Identifier">ConnManager</span></a>
-  <span class="Identifier">dialLock</span><span class="Other">:</span> <span class="Identifier">Table</span><span class="Other">[</span><a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">,</span> <span class="Identifier">AsyncLock</span><span class="Other">]</span>
+  <span class="Identifier">dialLock</span><span class="Other">:</span> <span class="Identifier">Table</span><span class="Other">[</span><span class="Identifier">Opt</span><span class="Other">[</span><a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">AsyncLock</span><span class="Other">]</span>
   <span class="Identifier">transports</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="upgrademngrs/upgrade.html#Transport"><span class="Identifier">Transport</span></a><span class="Other">]</span>
   <span class="Identifier">nameResolver</span><span class="Other">:</span> <a href="nameresolving/nameresolver.html#NameResolver"><span class="Identifier">NameResolver</span></a>
 </pre></dt>
@@ -338,9 +340,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/dialer.nim#L259"
+href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/dialer.nim#L269"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dialer.nim#L259" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dialer.nim#L269" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -355,9 +357,22 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/dialer.nim#L256"
+href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/dialer.nim#L266"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dialer.nim#L256" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dialer.nim#L266" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="connect.e,Dialer,seq[MultiAddress]" class="tohide">
+<dt><pre><span class="Keyword">method</span> <a href="#connect.e%2CDialer%2Cseq%5BMultiAddress%5D"><span class="Identifier">connect</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="dialer.html#Dialer"><span class="Identifier">Dialer</span></a><span class="Other">;</span> <span class="Identifier">addrs</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">]</span> {.
+    <span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+Connects to a peer and retrieve it's PeerId
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/dialer.nim#L172"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dialer.nim#L172" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -369,9 +384,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 connect remote peer without negotiating a protocol 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/dialer.nim#L157"
+href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/dialer.nim#L159"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dialer.nim#L157" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dialer.nim#L159" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -383,9 +398,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 create a protocol stream and establish a connection if one doesn't exist already 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/dialer.nim#L220"
+href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/dialer.nim#L230"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dialer.nim#L220" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dialer.nim#L230" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -396,9 +411,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 create a protocol stream over an existing connection 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/dialer.nim#L203"
+href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/dialer.nim#L213"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dialer.nim#L203" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dialer.nim#L213" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -409,9 +424,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 Create a protocol stream and in order to check if a connection is possible. Doesn't use the Connection Manager to save it. 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/dialer.nim#L182"
+href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/dialer.nim#L192"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dialer.nim#L182" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dialer.nim#L192" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -420,7 +435,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="19">
 <h1><a class="toc-backref" href="#19">Exports</a></h1>
 <dl class="item">
-<a href="dial.html#addTransport.e,Dial,Transport"><span class="Identifier">addTransport</span></a>, <a href="dial.html#tryDial.e,Dial,PeerId,seq[MultiAddress]"><span class="Identifier">tryDial</span></a>, <a href="dial.html#Dial"><span class="Identifier">Dial</span></a>, <a href="dial.html#connect.e,Dial,PeerId,seq[MultiAddress]"><span class="Identifier">connect</span></a>, <a href="dial.html#dial.e,Dial,PeerId,seq[string]"><span class="Identifier">dial</span></a>, <a href="dial.html#dial.e,Dial,PeerId,seq[MultiAddress],seq[string]"><span class="Identifier">dial</span></a>, <a href="errors.html#toException,cstring"><span class="Identifier">toException</span></a>, <a href="errors.html#toException,string"><span class="Identifier">toException</span></a>, <a href="errors.html#allFuturesThrowing,varargs[Future[T]]"><span class="Identifier">allFuturesThrowing</span></a>, <a href="errors.html#tryAndWarn.t,static[string],untyped"><span class="Identifier">tryAndWarn</span></a>, <a href="errors.html#checkFutures.m,seq[Future[T]],untyped"><span class="Identifier">checkFutures</span></a>, <a href="errors.html#LPError"><span class="Identifier">LPError</span></a>
+<a href="dial.html#addTransport.e,Dial,Transport"><span class="Identifier">addTransport</span></a>, <a href="dial.html#tryDial.e,Dial,PeerId,seq[MultiAddress]"><span class="Identifier">tryDial</span></a>, <a href="dial.html#dial.e,Dial,PeerId,seq[MultiAddress],seq[string]"><span class="Identifier">dial</span></a>, <a href="dial.html#Dial"><span class="Identifier">Dial</span></a>, <a href="dial.html#connect.e,Dial,PeerId,seq[MultiAddress]"><span class="Identifier">connect</span></a>, <a href="dial.html#dial.e,Dial,PeerId,seq[string]"><span class="Identifier">dial</span></a>, <a href="dial.html#connect.e,Dial,seq[MultiAddress]"><span class="Identifier">connect</span></a>, <a href="errors.html#toException,cstring"><span class="Identifier">toException</span></a>, <a href="errors.html#toException,string"><span class="Identifier">toException</span></a>, <a href="errors.html#allFuturesThrowing,varargs[Future[T]]"><span class="Identifier">allFuturesThrowing</span></a>, <a href="errors.html#tryAndWarn.t,static[string],untyped"><span class="Identifier">tryAndWarn</span></a>, <a href="errors.html#checkFutures.m,seq[Future[T]],untyped"><span class="Identifier">checkFutures</span></a>, <a href="errors.html#LPError"><span class="Identifier">LPError</span></a>
 </dl></div>
 
   </div>
@@ -430,7 +445,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-31 14:44:14 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-31 15:18:28 UTC</small>
       </div>
     </div>
   </div>
