--- a/noise-peerid/libp2p/dialer.html
+++ b/noise-peerid/libp2p/dialer.html
@@ -368,7 +368,7 @@ class="link-seesrc" target="_blank">Source</a>
     <span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
-Connects to a peer and retrieve it's PeerId
+Connects to a peer and retrieve its PeerId
 &nbsp;&nbsp;<a
 href="https://github.com/status-im/nim-libp2p/tree/noise-peerid/libp2p/dialer.nim#L172"
 class="link-seesrc" target="_blank">Source</a>
@@ -445,7 +445,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-01 12:02:20 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-02 15:27:56 UTC</small>
       </div>
     </div>
   </div>
