--- a/unstable/libp2p/dialer.html
+++ b/unstable/libp2p/dialer.html
@@ -407,7 +407,7 @@ class="link-seesrc" target="_blank">Source</a>
     <a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span> {.<span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
-Create a protocol stream and in order to check if a connection is possible. Doesn't use the Connection Manager to save it. 
+Create a protocol stream in order to check if a connection is possible. Doesn't use the Connection Manager to save it. 
 &nbsp;&nbsp;<a
 href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/dialer.nim#L185"
 class="link-seesrc" target="_blank">Source</a>
@@ -430,7 +430,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-02 10:02:22 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-02 20:03:49 UTC</small>
       </div>
     </div>
   </div>
