--- a/opt-compilation-error/libp2p/protocols/secure/secure.html
+++ b/opt-compilation-error/libp2p/protocols/secure/secure.html
@@ -226,11 +226,11 @@ window.addEventListener("DOMContentLoaded", main2);
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">new
-      <li><a class="reference" href="#new%2CtypeSecureConn%2CConnection%2CPeerId%2COption%5BMultiAddress%5D%2CDuration"
+      <li><a class="reference" href="#new%2CtypeSecureConn%2CConnection%2CPeerId%2COpt%5BMultiAddress%5D%2CDuration"
     title="new(T: type SecureConn; conn: Connection; peerId: PeerId;
-    observedAddr: Option[MultiAddress];
+    observedAddr: Opt[MultiAddress];
     timeout: Duration = DefaultConnectionTimeout): T:type">new(T: type SecureConn; conn: Connection; peerId: PeerId;
-    observedAddr: Option[MultiAddress];
+    observedAddr: Opt[MultiAddress];
     timeout: Duration = DefaultConnectionTimeout): T:type</a></li>
 
   </ul>
@@ -379,9 +379,9 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<div id="new,typeSecureConn,Connection,PeerId,Option[MultiAddress],Duration" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#new%2CtypeSecureConn%2CConnection%2CPeerId%2COption%5BMultiAddress%5D%2CDuration"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Keyword">type</span> <span class="Identifier">SecureConn</span><span class="Other">;</span> <span class="Identifier">conn</span><span class="Other">:</span> <a href="../../stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">;</span> <span class="Identifier">peerId</span><span class="Other">:</span> <a href="../../peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">;</span>
-         <span class="Identifier">observedAddr</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="../../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">;</span>
+<div id="new,typeSecureConn,Connection,PeerId,Opt[MultiAddress],Duration" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#new%2CtypeSecureConn%2CConnection%2CPeerId%2COpt%5BMultiAddress%5D%2CDuration"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Keyword">type</span> <span class="Identifier">SecureConn</span><span class="Other">;</span> <span class="Identifier">conn</span><span class="Other">:</span> <a href="../../stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">;</span> <span class="Identifier">peerId</span><span class="Other">:</span> <a href="../../peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">;</span>
+         <span class="Identifier">observedAddr</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><a href="../../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">;</span>
          <span class="Identifier">timeout</span><span class="Other">:</span> <span class="Identifier">Duration</span> <span class="Other">=</span> <span class="Identifier">DefaultConnectionTimeout</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T:type</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
@@ -544,7 +544,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-21 12:29:42 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-21 16:06:55 UTC</small>
       </div>
     </div>
   </div>
