--- a/opt-compilation-error/libp2p/stream/chronosstream.html
+++ b/opt-compilation-error/libp2p/stream/chronosstream.html
@@ -225,12 +225,10 @@ window.addEventListener("DOMContentLoaded", main2);
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">init
-      <li><a class="reference" href="#init%2CtypeChronosStream%2CStreamTransport%2CDirection%2COption%5BMultiAddress%5D"
+      <li><a class="reference" href="#init%2CtypeChronosStream%2CStreamTransport%2CDirection%2COpt%5BMultiAddress%5D"
     title="init(C: type ChronosStream; client: StreamTransport; dir: Direction;
-     timeout = DefaultChronosStreamTimeout;
-     observedAddr: Option[MultiAddress] = none(MultiAddress)): ChronosStream">init(C: type ChronosStream; client: StreamTransport; dir: Direction;
-     timeout = DefaultChronosStreamTimeout;
-     observedAddr: Option[MultiAddress] = none(MultiAddress)): ChronosStream</a></li>
+     timeout = DefaultChronosStreamTimeout; observedAddr: Opt[MultiAddress]): ChronosStream">init(C: type ChronosStream; client: StreamTransport; dir: Direction;
+     timeout = DefaultChronosStreamTimeout; observedAddr: Opt[MultiAddress]): ChronosStream</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">shortLog
@@ -353,10 +351,9 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<div id="init,typeChronosStream,StreamTransport,Direction,Option[MultiAddress]" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#init%2CtypeChronosStream%2CStreamTransport%2CDirection%2COption%5BMultiAddress%5D"><span class="Identifier">init</span></a><span class="Other">(</span><span class="Identifier">C</span><span class="Other">:</span> <span class="Keyword">type</span> <span class="Identifier">ChronosStream</span><span class="Other">;</span> <span class="Identifier">client</span><span class="Other">:</span> <span class="Identifier">StreamTransport</span><span class="Other">;</span> <span class="Identifier">dir</span><span class="Other">:</span> <a href="lpstream.html#Direction"><span class="Identifier">Direction</span></a><span class="Other">;</span>
-          <span class="Identifier">timeout</span> <span class="Other">=</span> <span class="Identifier">DefaultChronosStreamTimeout</span><span class="Other">;</span>
-          <span class="Identifier">observedAddr</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span> <span class="Other">=</span> <span class="Identifier">none</span><span class="Other">(</span><a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <a href="chronosstream.html#ChronosStream"><span class="Identifier">ChronosStream</span></a> {.
+<div id="init,typeChronosStream,StreamTransport,Direction,Opt[MultiAddress]" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#init%2CtypeChronosStream%2CStreamTransport%2CDirection%2COpt%5BMultiAddress%5D"><span class="Identifier">init</span></a><span class="Other">(</span><span class="Identifier">C</span><span class="Other">:</span> <span class="Keyword">type</span> <span class="Identifier">ChronosStream</span><span class="Other">;</span> <span class="Identifier">client</span><span class="Other">:</span> <span class="Identifier">StreamTransport</span><span class="Other">;</span> <span class="Identifier">dir</span><span class="Other">:</span> <a href="lpstream.html#Direction"><span class="Identifier">Direction</span></a><span class="Other">;</span>
+          <span class="Identifier">timeout</span> <span class="Other">=</span> <span class="Identifier">DefaultChronosStreamTimeout</span><span class="Other">;</span> <span class="Identifier">observedAddr</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <a href="chronosstream.html#ChronosStream"><span class="Identifier">ChronosStream</span></a> {.
     <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
@@ -499,7 +496,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-21 12:29:43 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-21 16:06:55 UTC</small>
       </div>
     </div>
   </div>
