--- a/opt-compilation-error/libp2p/transports/tcptransport.html
+++ b/opt-compilation-error/libp2p/transports/tcptransport.html
@@ -230,12 +230,10 @@ window.addEventListener("DOMContentLoaded", main2);
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">connHandler
-      <li><a class="reference" href="#connHandler%2CTcpTransport%2CStreamTransport%2COption%5BMultiAddress%5D%2CDirection"
+      <li><a class="reference" href="#connHandler%2CTcpTransport%2CStreamTransport%2COpt%5BMultiAddress%5D%2CDirection"
     title="connHandler(self: TcpTransport; client: StreamTransport;
-            observedAddr: Option[MultiAddress]; dir: Direction): Future[
-    Connection]">connHandler(self: TcpTransport; client: StreamTransport;
-            observedAddr: Option[MultiAddress]; dir: Direction): Future[
-    Connection]</a></li>
+            observedAddr: Opt[MultiAddress]; dir: Direction): Future[Connection]">connHandler(self: TcpTransport; client: StreamTransport;
+            observedAddr: Opt[MultiAddress]; dir: Direction): Future[Connection]</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">new
@@ -360,9 +358,9 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<div id="connHandler,TcpTransport,StreamTransport,Option[MultiAddress],Direction" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#connHandler%2CTcpTransport%2CStreamTransport%2COption%5BMultiAddress%5D%2CDirection"><span class="Identifier">connHandler</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="tcptransport.html#TcpTransport"><span class="Identifier">TcpTransport</span></a><span class="Other">;</span> <span class="Identifier">client</span><span class="Other">:</span> <span class="Identifier">StreamTransport</span><span class="Other">;</span>
-                 <span class="Identifier">observedAddr</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">dir</span><span class="Other">:</span> <a href="../stream/lpstream.html#Direction"><span class="Identifier">Direction</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span>
+<div id="connHandler,TcpTransport,StreamTransport,Opt[MultiAddress],Direction" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#connHandler%2CTcpTransport%2CStreamTransport%2COpt%5BMultiAddress%5D%2CDirection"><span class="Identifier">connHandler</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="tcptransport.html#TcpTransport"><span class="Identifier">TcpTransport</span></a><span class="Other">;</span> <span class="Identifier">client</span><span class="Other">:</span> <span class="Identifier">StreamTransport</span><span class="Other">;</span>
+                 <span class="Identifier">observedAddr</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">dir</span><span class="Other">:</span> <a href="../stream/lpstream.html#Direction"><span class="Identifier">Direction</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span>
     <a href="../stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">]</span> {.<span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
                   <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
@@ -474,7 +472,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-21 12:29:43 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-21 16:06:55 UTC</small>
       </div>
     </div>
   </div>
